# VolatilityPrediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  infer.py  pyproject.toml  train.py
configs/: config.yaml
configs/data/: dataset.yaml
configs/inference/: inference.yaml
configs/model/: model.yaml  training.yaml
data/: .gitignore  optiver-realized-volatility-prediction.dvc
models/: model.ckpt.dvc
volatility_prediction/: attention.py  data_downloader.py  dataset.py  model.py  utils.py
