[project]
name = "volatility-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "ia00",email = "ilya.andriyanov00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xarray (>=2025.1.0,<2026.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "einops (>=0.8.0,<0.9.0)",
    "torch (>=2.0.0,<=2.2.2)",
    "pytorch-lightning (>=1.0.0.post0,<2.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "pyarrow (>=18.1.0,<19.0.0)",#used to read parquet files, could not install it other way
    "bottleneck (>=1.4.2,<2.0.0)",#used by xarray, could not install it other way
    "numpy (<2.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pre-commit (>=4.0.1,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "volatility_prediction" }
]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
